--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -17,6 +17,7 @@
   "display": "standalone",
   "orientation": "any",
   "dir": "ltr",
+  "lang": "cs",
   "theme_color": "#cccccc",
   "background_color": "#cccccc"
   "description": "Online radio player",
