--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -20,5 +20,5 @@
   "lang": "cs",
   "theme_color": "#cccccc",
   "background_color": "#cccccc"
-  "description": "Online radio player",
+  "description": "Online radio player"
 }
