--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -19,6 +19,6 @@
   "dir": "ltr",
   "lang": "cs",
   "theme_color": "#cccccc",
-  "background_color": "#cccccc"
+  "background_color": "#cccccc",
   "description": "Online Radio Player"
 }
