--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,12 +3,12 @@
   "name": "Radio Online",
   "icons": [
     {
-      "src": "/assets/favicon-black.svg",
+      "src": "/assets/favicon_black.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     },
     {
-      "src": "/assets/favicon-white.svg",
+      "src": "/assets/favicon_white.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
