--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -18,7 +18,7 @@
   "orientation": "any",
   "dir": "ltr",
   "lang": "cs",
-  "theme_color": "#cccccc",
-  "background_color": "#cccccc",
+  "theme_color": "#add8e6",
+  "background_color": "#ffffff",
   "description": "Online Radio Player"
 }
