--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -11,6 +11,136 @@
       "src": "/RadioPlayer/assets/favicon_white.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/20.png",
+      "sizes": "20x20",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/29.png",
+      "sizes": "29x29",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/40.png",
+      "sizes": "40x40",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/50.png",
+      "sizes": "50x50",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/57.png",
+      "sizes": "57x57",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/58.png",
+      "sizes": "58x58",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/60.png",
+      "sizes": "60x60",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/76.png",
+      "sizes": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/80.png",
+      "sizes": "80x80",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/87.png",
+      "sizes": "87x87",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/100.png",
+      "sizes": "100x100",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/114.png",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/167.png",
+      "sizes": "167x167",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/RadioPlayer/assets/pngfavicon/1024.png",
+      "sizes": "1024x1024",
+      "type": "image/png"
     }
   ],
   "start_url": "index.html",
