--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -4,13 +4,21 @@
   "icons": [
     {
       "src": "/RadioPlayer/assets/favicon_black.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
+      "sizes": "16x16 24x24 32x32 48x48 72x72 96x96 128x128 256x256 512x512 1024x1024",
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
       "src": "/RadioPlayer/assets/favicon_white.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
+      "sizes": "16x16 24x24 32x32 48x48 72x72 96x96 128x128 256x256 512x512 1024x1024",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/RadioPlayer/assets/favicon_white_black_border.svg",
+      "sizes": "16x16 24x24 32x32 48x48 72x72 96x96 128x128 256x256 512x512 1024x1024",
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
       "src": "/RadioPlayer/assets/pngfavicon/16.png",
